force-app/main/default/objects/Record_History__c/Record_History__c.object-meta.xml
<CustomObject>
    <description>Custom history tracking of objects fields and related objects</description>
    <label>Record History</label>
    <nameField>
        <displayFormat>RH-{0000000}</displayFormat>
        <label>Record History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Record History</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>