force-app/main/default/objects/Record_History__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field Updated</fullName>
            </value>
            <value>
                <fullName>Related Record Created</fullName>
            </value>
            <value>
                <fullName>Related Record Field Updated</fullName>
            </value>
            <value>
                <fullName>Related Record Deleted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>