force-app/main/default/objects/Record_History__c/fields/Donation__c.field-meta.xml
<CustomField>
    <fullName>Donation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Donation</label>
    <referenceTo>Donation__c</referenceTo>
    <relationshipLabel>Record History</relationshipLabel>
    <relationshipName>Record_History</relationshipName>
    <type>Lookup</type>
</CustomField>