force-app/main/default/objects/Record_History__c/fields/Original_Value__c.field-meta.xml
<CustomField>
    <fullName>Original_Value__c</fullName>
    <label>Original Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>