force-app/main/default/objects/Record_History__c/fields/Related_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Name__c</fullName>
    <label>Related Record Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>