force-app/main/default/objects/Record_History__c/fields/User_Entry__c.field-meta.xml
<CustomField>
    <fullName>User_Entry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Entry</label>
    <referenceTo>User_Entry__c</referenceTo>
    <relationshipLabel>Record History</relationshipLabel>
    <relationshipName>Record_History</relationshipName>
    <type>Lookup</type>
</CustomField>